@@ -36,3 +36,4 @@
 ( cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/fancy_prefs.c;  ) > 0.9.9cvs1.patchset
 ( cvs diff -u -r 1.1.2.26 -r 1.1.2.27 src/fancy_viewer.c;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/fancy_viewer.h;  ) > 0.9.9cvs2.patchset
 ( cvs diff -u -r 1.1.2.42 -r 1.1.2.43 configure.ac;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/Makefile.am;  ) > 0.9.9cvs3.patchset
+( cvs diff -u -r 1.1.2.27 -r 1.1.2.28 src/fancy_viewer.c;  ) > 0.9.9cvs4.patchset
