@@ -1,3 +1,9 @@
+2010-02-19 [iwkse]	0.9.9cvs4
+
+	* src/fancy_viewer.c
+            Add support for internal images as cid
+            fix bug 2120
+
 2010-02-10 [iwkse]	0.9.9cvs3
 
 	* configure.ac
